--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<form>
 			  <div class="form-group">
 				<label for="exampleFormControlFile1">Input your dataset in .csv here</label>
-				<input type="file" class="form-control-file" id="exampleFormControlFile1">
+				<input type="file" class="form-control-file" accept=".csv" id="exampleFormControlFile1">
 			  </div>
 			</form>
 			<script type="text/javascript">
