--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#">Main</a>
+				<a class="nav-link js-scroll-trigger" href="#">Analyze</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="#">Page1</a>
+				<a class="nav-link js-scroll-trigger" href="#">About</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link js-scroll-trigger" href="#">Contact</a>
@@ -59,13 +59,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>About this page</h2>
-          <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
+          <h2>Данный сервис предназначен для использования возможностей Data Science и Data Analysis новичками в данной области</h2>
+          <p class="lead">Для пользования данным сервисом вам не потребуются специальные знания в данной области, такие как программирование и другие. Данный сервис позволяет:</p>
           <ul>
-            <li>Clickable nav links that smooth scroll to page sections</li>
-            <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-            <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-            <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+            <li>Проводить анализ ваших данных, получать удобное для анализа графическое представление ваших данных</li>
+            <li>Создавать и настраивать под ваши данные классификаторы, способные предсказывать что-то</li>
+            <li>Наверное, однажды сможете так же работать и с нейронными сетями</li>
+            <li>А может и не сможете</li>
           </ul>
 			<form>
 			  <div class="form-group">
