--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </ul>
 			<form>
 			  <div class="form-group">
-				<label for="exampleFormControlFile1">Input your dataset in .csv herezzz</label>
+				<label for="exampleFormControlFile1">Input your dataset in .csv here</label>
 				<input type="file" class="form-control-file" accept=".csv" id="exampleFormControlFile1">
 			  </div>
 			</form>
